--- a/Javascript/AngularJS/OutboxI/index.html
+++ b/Javascript/AngularJS/OutboxI/index.html
@@ -17,7 +17,7 @@
       <div class="container">
 
         <div class="email" ng-repeat="email in emails">
-          <span class="from"> {{ email.from }} </span> <span class="subject"> {{ email.subject }} </span><span class="date"> {{ email.datetime | date:"MM d YYYY" }} </span>
+          <span class="from"> {{ email.from }} </span> <span class="subject"> {{ email.subject }} </span><span class="date"> {{ email.datetime | date:"MMM d yyyy" }} </span>
         </div>
 
       </div>
